samples/_failures_safe/1761153194_437b0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be124d64.c: In function ‘main’:
./samples/SAFE/__tmp_be124d64.c:149:5: error: expected expression at end of input
  149 |     int filter_level = -
      |     ^~~
./samples/SAFE/__tmp_be124d64.c:149:5: error: expected declaration or statement at end of input
